[package]
name = "harfbuzz_rs"
version = "2.0.2-alpha.0"
authors = ["Manuel Reinhardt <manuel.rhdt@gmail.com>"]
description = "A high-level interface to HarfBuzz, exposing its most important functionality in a safe manner using Rust."
repository = "https://github.com/manuel-rhdt/harfbuzz_rs"
readme = "README.md"
keywords = ["text", "ffi", "textlayout", "shaping", "harfbuzz"]
categories = [
    "api-bindings",
    "external-ffi-bindings",
    "internationalization",
    "text-processing"
]
license = "MIT"
edition = "2018"

[dependencies]
rusttype = { version = "0.9.3", optional = true }
bitflags = "^1"
harfbuzz-bindings = "0.1.1"
